--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,7 +25,7 @@
           {% endif %}
         {% endif %}
       {% endfor %}
-
+      <li class="sidebar-nav-item"><a href="https://www.linkedin.com/in/sathishgangichetty">LinkedIn</a></li>
       <!--li class="sidebar-nav-item"><a href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a></li>
       <li class="sidebar-nav-item"><a href="{{ site.github.repo }}">GitHub project</a></li>
       <li class="sidebar-nav-item">Currently v{{ site.version }}</li-->
