--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,12 +25,13 @@
           {% endif %}
         {% endif %}
       {% endfor %}
-      <li class="sidebar-nav-item"><a href="https://www.linkedin.com/in/sathishgangichetty">LinkedIn</a></li>
+      <li class="sidebar-nav-item">
       <a href="https://www.linkedin.com/pub/sathish-gangichetty/26/2b0/a2a">
       
           <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_160x33.png" width="160" height="33" border="0" alt="View Sathish Gangichetty's profile on LinkedIn">
         
     </a>
+    </li>
       <!--li class="sidebar-nav-item"><a href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a></li>
       <li class="sidebar-nav-item"><a href="{{ site.github.repo }}">GitHub project</a></li>
       <li class="sidebar-nav-item">Currently v{{ site.version }}</li-->
