--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,10 +26,7 @@
         {% endif %}
       {% endfor %}
       <li class="sidebar-nav-item">
-      <a href="https://www.linkedin.com/pub/sathish-gangichetty/26/2b0/a2a">
-      
-          <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_profile_bluetxt_80x15.png" width="80" height="15" border="0" alt="View Sathish Gangichetty's profile on LinkedIn">
-        
+      <a href="https://www.linkedin.com/pub/sathish-gangichetty/26/2b0/a2a"> LinkedIn
     </a>
     </li>
       <!--li class="sidebar-nav-item"><a href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a></li>
